# GearShaderTool

./: CMakeLists.txt  LICENSE  README.md
GearShaderTool/: GearShaderTool.sln
GearShaderTool/GearShaderTool/: ShaderReflection.cpp  ShaderReflection.h  main.cpp
GearShaderTool/Shaders/: shader.frag
Shaders/: compile.bat  frag.spv  shader.vert  vert.spv
Source/: ShaderData.h  ShaderReflection.cpp  main.cpp
